--- a/Makefile.windows
+++ b/Makefile.windows
@@ -9,7 +9,7 @@ vpath %.cpp src\
 
 none_objects = main.o File.o logBase.o logTerminal.o logFile.o ControlwithLog.o \
 					logControl.o log.o MySocket.o MutexLock.o ConfigBase.o FileConfig.o \
-					SemaphorePV.o Thread.o SharedMemory.o
+					SemaphorePV.o Thread.o SharedMemory.o crc.o  BlockingInterruptor.o
 
 objects_release = $(foreach file, $(none_objects), $(patsubst %.o, %_release.o, $(file)))
 objects_debug = $(foreach file, $(none_objects), $(patsubst %.o, %_debug.o, $(file)))
@@ -18,7 +18,7 @@ obj_files_release = $(foreach file, $(objects_release),$(dir_obj_release)\$(file
 obj_files_debug = $(foreach file, $(objects_debug),$(dir_obj_debug)\$(file))
 
 h_export = logBase.h logFile.h logTerminal.h File.h ControlwithLog.h logControl.h log.h MySocket.h MutexLock.h \
-			ConfigBase.h FileConfig.h SemaphorePV.h Thread.h Error.h SharedMemory.h
+			ConfigBase.h FileConfig.h SemaphorePV.h Thread.h Error.h SharedMemory.h base.h crc.h BlockingInterruptor.h
 
 h_export_file = $(foreach file, $(h_export), include\$(file))
 
