--- a/Makefile.linux
+++ b/Makefile.linux
@@ -10,7 +10,8 @@ vpath %.cpp src/
 
 none_objects = main.o File.o logBase.o logTerminal.o logFile.o ControlwithLog.o \
 					logControl.o log.o MySocket.o MutexLock.o ConfigBase.o FileConfig.o \
-					SemaphorePV.o Thread.o SharedMemory.o  Crc.o FuncPtrMap.o BlockingInterruptor.o
+					SemaphorePV.o Thread.o SharedMemory.o  Crc.o FuncPtrMap.o BlockingInterruptor.o \
+					Error.o
 
 objects_release = $(foreach file, $(none_objects), $(patsubst %.o, %_release.o, $(file)))
 objects_debug = $(foreach file, $(none_objects), $(patsubst %.o, %_debug.o, $(file)))
@@ -20,7 +21,7 @@ obj_files_debug = $(foreach file, $(objects_debug),$(dir_obj_debug)/$(file))
 
 h_export = logBase.h logFile.h logTerminal.h File.h ControlwithLog.h logControl.h log.h MySocket.h MutexLock.h \
 			ConfigBase.h FileConfig.h SemaphorePV.h Thread.h Error.h SharedMemory.h BlockingInterruptor.h \
-			NorMap.h List.h Crc.h base.h FuncPtrMap.h Que.h
+			NorMap.h List.h Crc.h base.h FuncPtrMap.h Que.h Error.h FuncPtrMap.h ListCircle.h Thread.h
 
 h_export_file = $(foreach file, $(h_export), ./include/$(file))
 
